--- a/DZ1/index.html
+++ b/DZ1/index.html
@@ -11,11 +11,14 @@
         <div class="square">
             <h1 class="chose_difficult">Выбери сложность</h1>
             <div class="difficult_level">
-                <div class="difficult_level__number">1</div>
-                <div class="difficult_level__number">2</div>
-                <div class="difficult_level__number">3</div>
+                <div class="difficult_level__number difficult_level__number_1">1</div>
+                <div class="difficult_level__number difficult_level__number_2">2</div>
+                <div class="difficult_level__number difficult_level__number_3">3</div>
             </div>
-            <button class="button button_start">Старт</button>
+            <form action="">
+                <button class="button button_start">Старт</button>
+            </form>
         </div>
+    <script src="index.js"></script>
 </body>
 </html>
